crates/falcon_dart_parser/tests/snapshots/parser_tests__snap_async_function.snap
---
source: crates/falcon_dart_parser/tests/parser_tests.rs
assertion_line: 1312
expression: "prog.declarations[0]"
---
Function(
    FunctionDecl {
        annotations: [],
        is_external: false,
        is_async: true,
        is_generator: false,
        is_getter: false,
        is_setter: false,
        return_type: Some(
            Named(
                NamedType {
                    segments: [
                        Identifier {
                            name: "Future",
                            span: Span {
                                start: 0,
                                end: 6,
                            },
                        },
                    ],
                    type_args: [
                        Named(
                            NamedType {
                                segments: [
                                    Identifier {
                                        name: "String",
                                        span: Span {
                                            start: 7,
                                            end: 13,
                                        },
                                    },
                                ],
                                type_args: [],
                                is_nullable: false,
                                span: Span {
                                    start: 7,
                                    end: 13,
                                },
                            },
                        ),
                    ],
                    is_nullable: false,
                    span: Span {
                        start: 0,
                        end: 15,
                    },
                },
            ),
        ),
        name: Identifier {
            name: "fetchName",
            span: Span {
                start: 15,
                end: 24,
            },
        },
        type_params: [],
        params: FormalParamList {
            positional: [],
            optional_positional: [],
            named: [],
            span: Span {
                start: 24,
                end: 27,
            },
        },
        body: Some(
            Block(
                Block {
                    stmts: [
                        Expr(
                            ExprStmt {
                                expr: Await {
                                    expr: Call {
                                        callee: Field {
                                            object: Ident(
                                                Identifier {
                                                    name: "Future",
                                                    span: Span {
                                                        start: 41,
                                                        end: 47,
                                                    },
                                                },
                                            ),
                                            field: Identifier {
                                                name: "delayed",
                                                span: Span {
                                                    start: 48,
                                                    end: 55,
                                                },
                                            },
                                            is_null_safe: false,
                                            span: Span {
                                                start: 41,
                                                end: 55,
                                            },
                                        },
                                        type_args: [],
                                        args: ArgList {
                                            positional: [
                                                Field {
                                                    object: Ident(
                                                        Identifier {
                                                            name: "Duration",
                                                            span: Span {
                                                                start: 56,
                                                                end: 64,
                                                            },
                                                        },
                                                    ),
                                                    field: Identifier {
                                                        name: "zero",
                                                        span: Span {
                                                            start: 65,
                                                            end: 69,
                                                        },
                                                    },
                                                    is_null_safe: false,
                                                    span: Span {
                                                        start: 56,
                                                        end: 69,
                                                    },
                                                },
                                            ],
                                            named: [],
                                            span: Span {
                                                start: 55,
                                                end: 70,
                                            },
                                        },
                                        span: Span {
                                            start: 41,
                                            end: 70,
                                        },
                                    },
                                    span: Span {
                                        start: 35,
                                        end: 70,
                                    },
                                },
                                span: Span {
                                    start: 35,
                                    end: 72,
                                },
                            },
                        ),
                        Return(
                            ReturnStmt {
                                value: Some(
                                    StringLit(
                                        StringLitNode {
                                            raw: "'dart'",
                                            value: "dart",
                                            span: Span {
                                                start: 79,
                                                end: 85,
                                            },
                                        },
                                    ),
                                ),
                                span: Span {
                                    start: 72,
                                    end: 87,
                                },
                            },
                        ),
                    ],
                    span: Span {
                        start: 33,
                        end: 88,
                    },
                },
            ),
        ),
        span: Span {
            start: 0,
            end: 88,
        },
    },
)
