crates/falcon_dart_parser/tests/snapshots/parser_tests__snap_class_simple.snap
---
source: crates/falcon_dart_parser/tests/parser_tests.rs
expression: "prog.declarations[0]"
---
Class(
    ClassDecl {
        annotations: [],
        modifiers: ClassModifiers {
            is_abstract: false,
            is_interface: false,
            is_base: false,
            is_final: false,
            is_sealed: false,
        },
        name: Identifier {
            name: "Foo",
            span: Span {
                start: 6,
                end: 9,
            },
        },
        type_params: [],
        extends: None,
        with_clause: [],
        implements: [],
        members: [],
        span: Span {
            start: 0,
            end: 12,
        },
    },
)
