crates/falcon_dart_parser/tests/snapshots/parser_tests__snap_class_with_field_and_method.snap
---
source: crates/falcon_dart_parser/tests/parser_tests.rs
expression: "prog.declarations[0]"
---
Class(
    ClassDecl {
        annotations: [],
        modifiers: ClassModifiers {
            is_abstract: false,
            is_interface: false,
            is_base: false,
            is_final: false,
            is_sealed: false,
        },
        name: Identifier {
            name: "Point",
            span: Span {
                start: 6,
                end: 11,
            },
        },
        type_params: [],
        extends: None,
        with_clause: [],
        implements: [],
        members: [
            Field(
                FieldDecl {
                    annotations: [],
                    is_static: false,
                    is_abstract: false,
                    is_external: false,
                    is_covariant: false,
                    is_late: false,
                    is_final: false,
                    is_const: false,
                    field_type: Some(
                        Named(
                            NamedType {
                                segments: [
                                    Identifier {
                                        name: "int",
                                        span: Span {
                                            start: 14,
                                            end: 17,
                                        },
                                    },
                                ],
                                type_args: [],
                                is_nullable: false,
                                span: Span {
                                    start: 14,
                                    end: 18,
                                },
                            },
                        ),
                    ),
                    declarators: [
                        VarDeclarator {
                            name: Identifier {
                                name: "x",
                                span: Span {
                                    start: 18,
                                    end: 19,
                                },
                            },
                            initializer: None,
                            span: Span {
                                start: 14,
                                end: 19,
                            },
                        },
                    ],
                    span: Span {
                        start: 14,
                        end: 21,
                    },
                },
            ),
            Method(
                MethodDecl {
                    annotations: [],
                    is_static: false,
                    is_abstract: false,
                    is_external: false,
                    is_async: false,
                    is_generator: false,
                    return_type: Some(
                        Void {
                            span: Span {
                                start: 21,
                                end: 26,
                            },
                        },
                    ),
                    name: Identifier {
                        name: "move",
                        span: Span {
                            start: 26,
                            end: 30,
                        },
                    },
                    type_params: [],
                    params: FormalParamList {
                        positional: [
                            FormalParam {
                                annotations: [],
                                is_required: true,
                                is_covariant: false,
                                is_final: false,
                                is_field: false,
                                is_super: false,
                                param_type: Some(
                                    Named(
                                        NamedType {
                                            segments: [
                                                Identifier {
                                                    name: "int",
                                                    span: Span {
                                                        start: 31,
                                                        end: 34,
                                                    },
                                                },
                                            ],
                                            type_args: [],
                                            is_nullable: false,
                                            span: Span {
                                                start: 31,
                                                end: 35,
                                            },
                                        },
                                    ),
                                ),
                                name: Identifier {
                                    name: "dx",
                                    span: Span {
                                        start: 35,
                                        end: 37,
                                    },
                                },
                                default_value: None,
                                function_params: None,
                                span: Span {
                                    start: 31,
                                    end: 37,
                                },
                            },
                        ],
                        optional_positional: [],
                        named: [],
                        span: Span {
                            start: 30,
                            end: 39,
                        },
                    },
                    body: Some(
                        Block(
                            Block {
                                stmts: [],
                                span: Span {
                                    start: 39,
                                    end: 42,
                                },
                            },
                        ),
                    ),
                    span: Span {
                        start: 21,
                        end: 42,
                    },
                },
            ),
        ],
        span: Span {
            start: 0,
            end: 43,
        },
    },
)
