crates/falcon_dart_parser/tests/snapshots/parser_tests__snap_collection_for.snap
---
source: crates/falcon_dart_parser/tests/parser_tests.rs
expression: "prog.declarations[0]"
---
Function(
    FunctionDecl {
        annotations: [],
        is_external: false,
        is_async: false,
        is_generator: false,
        is_getter: false,
        is_setter: false,
        return_type: Some(
            Named(
                NamedType {
                    segments: [
                        Identifier {
                            name: "List",
                            span: Span {
                                start: 0,
                                end: 4,
                            },
                        },
                    ],
                    type_args: [
                        Named(
                            NamedType {
                                segments: [
                                    Identifier {
                                        name: "int",
                                        span: Span {
                                            start: 5,
                                            end: 8,
                                        },
                                    },
                                ],
                                type_args: [],
                                is_nullable: false,
                                span: Span {
                                    start: 5,
                                    end: 8,
                                },
                            },
                        ),
                    ],
                    is_nullable: false,
                    span: Span {
                        start: 0,
                        end: 10,
                    },
                },
            ),
        ),
        name: Identifier {
            name: "doubled",
            span: Span {
                start: 10,
                end: 17,
            },
        },
        type_params: [],
        params: FormalParamList {
            positional: [
                FormalParam {
                    annotations: [],
                    is_required: true,
                    is_covariant: false,
                    is_final: false,
                    is_field: false,
                    is_super: false,
                    param_type: Some(
                        Named(
                            NamedType {
                                segments: [
                                    Identifier {
                                        name: "List",
                                        span: Span {
                                            start: 18,
                                            end: 22,
                                        },
                                    },
                                ],
                                type_args: [
                                    Named(
                                        NamedType {
                                            segments: [
                                                Identifier {
                                                    name: "int",
                                                    span: Span {
                                                        start: 23,
                                                        end: 26,
                                                    },
                                                },
                                            ],
                                            type_args: [],
                                            is_nullable: false,
                                            span: Span {
                                                start: 23,
                                                end: 26,
                                            },
                                        },
                                    ),
                                ],
                                is_nullable: false,
                                span: Span {
                                    start: 18,
                                    end: 28,
                                },
                            },
                        ),
                    ),
                    name: Identifier {
                        name: "xs",
                        span: Span {
                            start: 28,
                            end: 30,
                        },
                    },
                    default_value: None,
                    function_params: None,
                    span: Span {
                        start: 18,
                        end: 30,
                    },
                },
            ],
            optional_positional: [],
            named: [],
            span: Span {
                start: 17,
                end: 32,
            },
        },
        body: Some(
            Arrow(
                List {
                    is_const: false,
                    type_arg: None,
                    elements: [
                        For {
                            is_await: false,
                            variable: Some(
                                Identifier {
                                    name: "x",
                                    span: Span {
                                        start: 47,
                                        end: 48,
                                    },
                                },
                            ),
                            var_type: None,
                            pattern: None,
                            iterable: Ident(
                                Identifier {
                                    name: "xs",
                                    span: Span {
                                        start: 52,
                                        end: 54,
                                    },
                                },
                            ),
                            element: Expr(
                                Binary {
                                    op: Mul,
                                    left: Ident(
                                        Identifier {
                                            name: "x",
                                            span: Span {
                                                start: 56,
                                                end: 57,
                                            },
                                        },
                                    ),
                                    right: IntLit {
                                        value: "2",
                                        span: Span {
                                            start: 60,
                                            end: 61,
                                        },
                                    },
                                    span: Span {
                                        start: 56,
                                        end: 61,
                                    },
                                },
                            ),
                            span: Span {
                                start: 36,
                                end: 61,
                            },
                        },
                    ],
                    span: Span {
                        start: 35,
                        end: 62,
                    },
                },
                Span {
                    start: 32,
                    end: 63,
                },
            ),
        ),
        span: Span {
            start: 0,
            end: 63,
        },
    },
)
